--- a/Djikstra.ipynb
+++ b/Djikstra.ipynb
@@ -15,7 +15,7 @@
     "The implementation of the adjacency matrix is in form of a two dimensional list.\n",
     "\n",
     "* __To define a `graph`, reassign the <kbd>graphMatrix</kbd> to a new `adjacency matrix`.__\n",
-    "* __The `nodes` are referenced using `intergers` ranging from <kbd>0</kbd> through <kbd>n-1</kdb>.__\n",
+    "* __The `nodes` are referenced using `intergers` ranging from <kbd>0</kbd> through <kbd>n-1</kbd>.__\n",
     "* __The `directed edges` are defined with their associated cost ranging between <kbd>0</kbd> and <kbd>float(\"inf\")</kbd>.__\n",
     "* __To define an `edge that does not exist`, define it's cost as <kbd>float(\"inf\")</kbd>.__\n",
     "* __To define a `directly connected edge`, define it's cost as the <kbd>actual cost</kbd> of the edge.__\n",
